test/corpus/literals.txt
================================================================================
Null
================================================================================

{null}

--------------------------------------------------------------------------------

(template
  (tag (null))
  (text))

================================================================================
Boolean
================================================================================

{true}
{false}

--------------------------------------------------------------------------------

(template
  (tag (boolean))
  (tag (boolean))
  (text))

================================================================================
Number
================================================================================

{1234}
{1.34}
{.234}
{123.}

--------------------------------------------------------------------------------

(template
  (tag (number))
  (tag (number))
  (tag (number))
  (tag (number))
  (text))

================================================================================
String
================================================================================

{''}
{'"string\'!'}
{""}
{"'string\"!"}

--------------------------------------------------------------------------------

(template
  (tag (string))
  (tag (string
    (string_content)
    (escape_sequence)
    (string_content)))
  (tag (string))
  (tag (string
    (string_content)
    (escape_sequence)
    (string_content)))
  (text))

================================================================================
Array
================================================================================

{[]}
{[1]}
{[1 => 1, 1,]}

--------------------------------------------------------------------------------

(template
  (tag (array))
  (tag (array
    (array_item
      (number))))
  (tag (array
    (array_item
      key: (number)
      value: (number))
    (array_item
      (number))))
  (text))

================================================================================
Array (invalid)
:error
================================================================================

{[,]}

--------------------------------------------------------------------------------
